[package]
name = "chaff"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
winapi = { version = "0.3", features = ["synchapi", "namedpipeapi", "handleapi", "minwindef", "winnt"] }
rand = "0.8"
tray-icon = "0.14"

[profile.release]
opt-level = "z"
lto = true
strip = true
